style.css
* {
    font-family: 'Ubuntu', sans-serif;
}

a:link { color: lightcoral;; TEXT-DECORATION: none; font-weight: normal }
a:visited { color: lightcoral;; TEXT-DECORATION: none; font-weight: normal }
a:active { color: lightcoral;; TEXT-DECORATION: none }
a:hover { color: coral; TEXT-DECORATION: none; font-weight: none }

.small-font{
    font-size:11px;
}

html{
    position: relative;
    min-height: 100%;
    -ms-overflow-style: none;
}

html::-webkit-scrollbar {
    display: none;
}

body{
    overflow-y: scroll;
}

svg{
    vertical-align: top;
    width:24px;
    height:24px;
    margin-left: 6px;
}


.container-fluid{
    padding-left:0px;
    padding-right:0px;
}

.col-lg-4{
    padding-left:3px;
    padding-right:3px;
}

#title.container-fluid{
    position:fixed;
    background-color:rgba(255, 255, 255, 0.90);
    top:0;
    height: 60px;
    padding: 6px;
    font-size: 36px;
    text-align: center;
    letter-spacing: 0;
    vertical-align: middle;
}

#menu.container-fluid{
    position:fixed;
    background-color:rgba(255, 255, 255, 0.90);
    top:60px;
    height: 30px;
    text-align: right;
    padding-right: 6vw;
}

#menu.container-fluid a{
    padding: 6px;
}

#spacer {
    height:30px;
}

#main.container-fluid{
    padding-left: 6px;
    padding-right: 6px;
}

body {
    top: 100px;
    position: relative;
    margin: 0 0 35px;
}

/* cards */
.card-container{
    position:relative;
    margin-left: 3px;
    margin-right: 3px;
    max-width: 360px;
}

.microcard {
    cursor:hand;
    cursor: -webkit-hand;
    position: relative;
    background-color:rgba(255, 255, 255, 1);
    border-color: lightgrey;
    width: 100%;
    height: 240px;
    border-style: solid;
    border-width: 1px;
    border-radius: 3px;
    margin-bottom: 6px;
    overflow: hidden;
}

.microcard:hover {
    box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
    border-color: gray;
}

.microcard-text {
    position: relative;
    text-align: left;
    height: 30%;
    background-color:rgba(255, 255, 255, 0.90);
}

.microcard-text > .title {
    position: relative;
    margin-top: 6px;
    margin-left: 8px;
    margin-right: 8px;
    line-height: 95%;
    font-size: 20px;
    display:inline-block;
}

.microcard-text > .description {
    position: relative;
    margin-top: 3px;
    margin-left: 8px;
    margin-right: 8px;
    font-size:14px;
}

.microcard-img {
    height: 70%;
    overflow: hidden;
    display: inline-block;
}

.microcard-img > img {
    position: absolute;
    top:0;
    bottom:0;
    margin:auto;
    width: 100%;
    vertical-align: middle;
}

.tag {
    position: absolute;
    top: 0px;
    left: 0px;
    margin-top: 4px;
    margin-left: 4px;
    padding: 2px;
    font-size: 10px;
    color: white;
    border-radius: 3px;
}

.tag-prod {
    background-color: lightcoral;
}

.tag-proj {
    background-color: rgb(82, 105, 236);
}

.tag-pub {
    background-color: lightseagreen;
}

.contents-popup > .contents {
    position:fixed;
    padding: 5% 10% 5% 10%;
    margin:0;
    top:0;
    left:0;
    z-index: 1;
    text-align: left;
    display:none;
    width: 100vw;
    height: 100vh;
    background-color:rgba(255,255,255,0.95); 
    color:black;
    overflow-y:scroll;
    -webkit-overflow-scrolling: touch;
}

.contents > .x {
    position:fixed;
    top:10px;
    right:3%;
    font-size:28px;
    cursor: -webkit-hand;
    cursor: hand;
    color: lightcoral;
}

.contents > .x:hover {
    color: coral;
}

.contents-header {
    position: relative;
    width: 100%;
    height: 300px;
    overflow: hidden;
    display: inline-block;
    z-index: -2;
    background-color: white;
}

.contents-header > img {
    position: absolute;
    width: 100%;
    top: 0;
    bottom: 0;
    right:0;
    z-index: -1;
    margin:auto;
    overflow:hidden;
    vertical-align: middle;
}

.contents-body {
    position: relative;
    background-color: white;
    box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
    padding: 20px;
}

.contents-body > p > img {
    display: inline-block;
    max-width: 50%;
    max-height: 480px;
}

footer {
    font-size: 10px;
    bottom:0;
    left: 0;
    height: 25px;
    width: 100%;
    text-align: center;
    overflow: hidden;
}

/* Animations */
.blink{
    animation: blinker 0.7s ease-in-out infinite;
    font-size: 18px;
}

@keyframes blinker {  
    0% { opacity: 1; color:lightgray}
    44% { opacity: 1; color:lightgray}
    45% { opacity: 0; color:lightgray}
    100% { opacity: 0; color:lightgray}
    }

svg:hover > a {
    fill: gray;
    }

/* Responsive Setting */
@media only screen and (max-width: 450px) {
    #title.container-fluid > a.subtext {
        display: none;
    }

    #menu.container-fluid {
        display: none;
    }

    .contents-header {
        height: 150px;
    }
  }

